--- a/apps/luckydraw/src/styles.scss
+++ b/apps/luckydraw/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/scss/bootstrap";
+
+.display-center {
+  display: flex;
+  height: 100vh;
+  align-items: center;
+}
